--- a/flask_app/static/css/index.css
+++ b/flask_app/static/css/index.css
@@ -29,6 +29,8 @@ body {
     flex-direction: column;
     align-items: center;
     margin-bottom: 40px;
+    top: 0px;
+    position: absolute;
 }
 
 .book-icon {
@@ -151,7 +153,7 @@ button[type="submit"]:hover {
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    margin-top: 20px;
+    margin: 20px;
 }
 
 .search-info h2 {
@@ -183,3 +185,14 @@ button[type="submit"]:hover {
     color: #333;
     font-weight: bold;
 }
+
+/* Logo */
+
+span.hydra-icon {
+    height: 18vw;
+    width: 18vw;
+    background-image: url('/static/css/logo.png');
+    background-size: cover;
+}
+
+.search-info ul {margin: 20px}
