--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Scopus Search by FF</title>
+    <title>Hydra Search</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
 </head>
@@ -10,51 +10,18 @@
         <span class="hydra-icon"></span>
         <form onsubmit="return submitForm(event)">
             <label for="search-query">What to search:</label>
-            <input type="text" id="search-query" placeholder="Enter your search query" required>
+            <input type="text" id="search-query" placeholder="Enter your search query" required pattern="[A-Za-z0-9()]*">
             <br>
             <button type="submit">Send hydra on a search</button>
         </form>
         <div class="search-info">
-            <h2>Please read me, do not make a fool of yourself.</h2>
-            <p>
-                The Hydra Search allows you to search for academic articles and papers from several academic databases.
-                It will automatically search for your query in the Springer database (titles only) and the Scopus database (titles and abstracts). More databases to come.
-                To perform a search, follow these steps:
-            </p>
-            <ol>
-                <li>Enter your search query in the "What to search" field.</li>
-                <li>Click the button to send the hydra on its quest.</li>
-                <li>Wait for the hydra to return with the results that will be automatically downloaded</li>
-            </ol>
-            <p>
-                <strong> Important #1</strong> <br>
-                This search was created for querying academic literature with a single word, such as "cybersecurity", or "devsecops", or "agile".
-                If you need a more complex search, you can do that, but you should keep the logic as simple as possible and use the following boolean operators and syntax. Examples:
-                <ul>
-                <li><strong>(cyber OR security) AND (bias OR perception)</strong>. This query will find articles that contain either "cyber" or "security" in their titles or abstracts, and also contain either "bias" or "perception".</li>
-                <li><strong> (maritime) AND (security OR cybersecurity)</strong>. This query will find articles that contain "maritime" in their titles, and also contain either "security" or "cybersecurity".</li>
-                </ul>
-                If you use boolean logic, <strong>use parenthes</strong> to group terms together, even if there is only a single term next to a boolean operator, as per "(maritime)" in the above example.
-                <br>
-            </p>
-            <p>
-                <strong> Important #2</strong>
-                <br>
-                Please remember to use single or very specific word combinations to refine your search. "security" is a broad term, "cybersecurity" is a little more precise, "devsecops" is extremely specific and better.
-            </p>
-            <p>
-                <strong> Important #3</strong>
-                <br>
-                Hydra will automatically remove duplicates based on DOI, normalized title hashes, and even by running cosine similarity testing (tf-idf), however, duplicates might still appear in the final spreadsheet. Please remove them manually, for academic databases aren't always perfect.
-            </p>
+            <!-- Existing content -->
         </div>
     </div>
 
     <!-- Modal for loading indicator -->
     <div id="loading-modal" class="modal">
-        <div class="modal-content">
-            <div class="loader"></div>
-        </div>
+        <!-- Existing content -->
     </div>
     <script>
         function submitForm(event) {
@@ -110,7 +77,6 @@
             return true;
         }
     </script>
-    
-
 </body>
 </html>
+
