--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -51,10 +51,13 @@
         </div>
     </div>
 
-<!-- Modal for loading indicator -->
-<div id="loading-modal" class="modal">
-    <!-- Existing content -->
-</div>
+    <!-- Modal for loading indicator -->
+    <div id="loading-modal" class="modal">
+        <div class="modal-content">
+            <div class="loader"></div>
+        </div>
+    </div>
+    
 <script>
     function submitForm(event) {
         event.preventDefault(); // Prevent form submission
