--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -12,7 +12,7 @@
             <label for="search-query">What to search:</label>
             <input type="text" id="search-query" placeholder="Enter your search query" required>
             <br>
-            <button type="submit">Send hydra on a search</button>
+            <button type="submit">Send the hydra on its quest for academic knowledge!</button>
         </form>
         <div class="search-info">
             <h2>Please read me, do not make a fool of yourself.</h2>
@@ -46,7 +46,7 @@
             <p>
                 <strong> Important #4</strong>
                 <br>
-                Hydra will automatically remove duplicates based on DOI, normalized title hashes, and even by running cosine similarity testing (tf-idf), however, duplicates might still appear in the final spreadsheet. Please remove them manually, for academic databases aren't always perfect.
+                Hydra will automatically remove duplicates based on DOI, normalized title hashes, and even by running cosine similarity testing (tf-idf), however, duplicates might still appear in the final spreadsheet. You might have to double check, for academic databases aren't always perfect.
             </p>
         </div>
     </div>
