--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -94,7 +94,7 @@
 
                 if (xhr.status === 200) {
                     var response = xhr.response;
-                    var filename = "query.xlsx"; // Set the desired file name here
+                    var filename = "results.xlsx"; // Set the desired file name here
 
                     // Create a temporary URL for the Blob
                     var url = URL.createObjectURL(response);
